# article-scraper

./: .env  Dockerfile  Makefile  README.md  pyproject.toml
article_scraper/: items.py  settings.py
article_scraper/spiders/: article_spider.py
